loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:8: error: illegal start of simple pattern
  for(var a <- 0 to 3){
      ^LoopCourse:11: error: '<-' expected but '}' found.
}
^