loopfor.LoopCourse.scala.code
var goal = 10 ;

def run() {
  foward(8);
  left();
}
def circle() {
  for(var a <- 0 to 3){
    run();
  }
}
circle()